[tool.poetry]
name = "gpg_keymanager"
version = "1.0.3"
description = "gpg pass password store keyring management"
homepage = "https://github.com/hile/gpg-keymanager"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
readme = "README.md"
include = [
    "LICENSE",
]
license = "BSD"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pathlib-tree = "^2.1.6"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2"
pytest = "^7.1"
tox = "^3"

[tool.poetry.scripts]
gpg-keymanager = 'gpg_keymanager.bin.gpg_keymanager:main'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
