[tool.poetry]
name = "gpg_keymanager"
version = "1.2.0"
description = "gpg pass password store keyring management"
homepage = "https://github.com/hile/gpg-keymanager"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
readme = "README.md"
include = [
    "LICENSE",
]
license = "BSD-3-Clause"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pathlib-tree = "^2"

[tool.poetry.group.dev.dependencies]
coverage = "^7"
flake8 = "^6"
flake8-bugbear = "^22"
flake8-quotes = "^3"
pycodestyle = "^2"
pyflakes = "^3"
pylint = "^2"
pytest = "^7"
tox = "^4"
ruff = "^0.0.261"

[tool.poetry.scripts]
gpg-keymanager = 'gpg_keymanager.bin.gpg_keymanager:main'

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
