[metadata]
description-file = README.md

[tox:tox]
envlist = py36

[testenv]
deps =
    -r requirements/test.txt
commands =
    unittest: coverage run --source gpg_keymanager --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py tests gpg_keymanager
    lint: pylint setup.py tests gpg_keymanager

[tool:pytest]
addopts = --verbose

[pycodestyle]
max-line-length = 120
statistics = True

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    build,
    dist
